--- a/api_jwt_v3/test/fixtures/uploads.yml
+++ b/api_jwt_v3/test/fixtures/uploads.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: uploads
+#
+#  id         :integer          not null, primary key
+#  url        :string
+#  name       :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
